day-form view beginning

--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -1,8 +1,6 @@
 {% extends "./base.html" %}
 {% load static %}
 
-<title>О сайте</title>
-
 {% block css %}
     <link href="{% static 'css/index.css' %}" rel="stylesheet">
 {% endblock %}
@@ -15,9 +13,9 @@
             <div class="col-lg-12">
                 <h1 class="mt-5">О сайте!</h1>
                 <p>Сайт для определения лунного возраста</p>
-                <button id="start-purchase-btn" type="button" class="btn btn-lg">
-                    <a id="start-purchase-link" href="#">
-                        Начать покупки
+                <button id="to-calculation-btn" type="button" class="btn btn-lg">
+                    <a id="to-calculation-link" href="#">
+                        На главную
                     </a>
                 </button>
             </div>
