--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -23,8 +23,8 @@
                     5. В некоторых коренных культурах Северной Америки использовалась система возраста, основанная на фазах Луны и движениях солнца. Например, индейцы племени Навахо используют лунный календарь для определения возраста человека.
                 </p>
                 <p>Использование нетрадиционных единиц времени для измерения возраста отражает глубокую связь людей с природой и их понимание цикличности жизни и Вселенной.</p>
-                <button id="start-purchase-btn" type="button" class="btn btn-lg">
-                    <a id="start-purchase-link" href="#">
+                <button id="to-calculation-btn" type="button" class="btn btn-lg">
+                    <a id="to-calculation-link" href="#">
                         Начать покупки
                     </a>
                 </button>
