--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -14,18 +14,21 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8">
-                <h1 class="mt-5">Нетрадиционные единицы времени, основанные на астрономических и внешних факторах, действительно использовались различными культурами в разные эпохи для измерения возраста людей.<br>
-                    Вот несколько примеров:</h1>
+                <h5 class="mt-5">Издревле представители различных культур использовали для измерения возраста людей единицы времени, основанные на астрономических и внешних факторах, некоторые из которых теперь видятся «нетрадиционными».</h5>
+                <h6>Вот несколько примеров:</h6>
                 <p>1. Древние египтяне использовали лунный календарь для определения возраста человека, который состоял из 12 месяцев по 29-30 дней каждый. Они также делили год на три сезона: весну, лето и зиму.<br>
                     2. В индийской культуре используется система лунных лет (варушамса) для измерения возраста человека. Она основана на лунном календаре и учитывает фазы Луны для определения возраста.<br>
                     3. В древней Греции использовалась система, основанная на олимпийских играх, которые проводились каждые четыре года. Возраст человека мог быть измерен в количестве олимпиад, которые он пережил.<br>
                     4. Некоторые африканские культуры используют систему возраста, основанную на сезонах и погодных условиях. Например, возраст может определяться тем, какой сезон был во время рождения ребенка или как часто случается определенное природное явление в течение жизни человека.<br>
                     5. В некоторых коренных культурах Северной Америки использовалась система возраста, основанная на фазах Луны и движениях солнца. Например, индейцы племени Навахо используют лунный календарь для определения возраста человека.
                 </p>
-                <p>Использование нетрадиционных единиц времени для измерения возраста отражает глубокую связь людей с природой и их понимание цикличности жизни и Вселенной.</p>
-                <button id="to-calculation-btn" type="button" class="btn btn-lg">
-                    <a id="to-calculation-link" href="#">
-                        Начать покупки
+                <i>
+                    <q>Использование нетрадиционных единиц времени для измерения возраста отражает глубокую связь людей с природой и их понимание цикличности жизни и Вселенной.</q>
+                    <figcaption>— ИИ</figcaption>
+                </i>
+                <button id="to-calculation-btn" type="button" class="btn btn-lg mt-4">
+                    <a id="to-calculation-link" href="{% url 'main:birthday' %}">
+                        Расcчитать свой лунный возраст !
                     </a>
                 </button>
             </div>
