--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -14,7 +14,7 @@
                 <h3 class="mt-5">О сайте!</h3>
                 <p>Сайт-калькулятор для определения лунного возраста и предстоящих «лунных юбилеев»</p>
                 <p>Вычисления носят упрощённый характер, за опору приняты данные по времени лунных циклов, сгенерированные с помощью ресурса <a href="//www.astronet.ru/db/moon/moontable.html">Astronet</a>.</p>
-                <p>Диапазон допустимых для ввода дат: с февраля 1931 года по настоящее время. В каптче можно вводить маленькие английские букваы.</p>
+                <p>Диапазон допустимых для ввода дат: с февраля 1931 года по настоящее время. В каптче можно вводить маленькие английские буквы.</p>
                 <p>Сайт разработан, запущен и поддерживается Дмитрием Ромашевым. <br>В ближайших планах разработка функционала обратной связи для сбора пожеланий, рекомендаций и откликов.</p>
                 <button id="to-calculation-btn" type="button" class="btn btn-lg mt-4">
                     <a id="to-calculation-link" href="{% url 'main:index' %}">
