--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -12,10 +12,8 @@
     <meta name="author" content="">
     <meta property="og:title" content="LunarAge">
     <meta property="og:description" content="Калькулятор лунного возраста">
-    {% if 0 %}       
-        <meta property="og:image" content="{{ product.image.url }}">
-        <meta property="og:url" content="{% url 'products:product' product.id %}">
-    {% endif %}                                                                            
+    <meta property="og:image" content="{% static 'img/og_moon.jpg' %}">
+    <meta property="og:url" content="https://lunarage.ru/">
 
     <title>{{ title }}</title> 
     <link rel="shortcut icon" type="image/png" href="{% static 'img/favicon.ico' %}"/>
